fix(client): fix horizontal scroll bar style

--- a/projects/client/src/styles/styles.scss
+++ b/projects/client/src/styles/styles.scss
@@ -39,6 +39,7 @@ body {
 @mixin scrollbar($theme) {
   ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
   }
   ::-webkit-scrollbar-thumb {
     border-radius: 4px;
